--- a/nosotros.html
+++ b/nosotros.html
@@ -14,16 +14,64 @@
 <header class="header">
 
     <a href="index.html">
-        <img class="header__logo"src="img/logo.png" alt="Logo de la pagina">
+        <img class="header__logo" src="img/logo.png" alt="Logo de la pagina">
     </a>
 </header>
 <nav class="navegacion">
     <a class="navegacion__enlace" href="index.html">Tienda</a>
     <a class="navegacion__enlace navegacion__enlace--avtivo" href="nosotros.html">Nosotros</a>
 </nav>
-<main>
-    <h1>Nosostros</h1>
+<main class="contenedor">
+        <h1>Sobre Nosostros</h1>
+        <div class="nosotros">
+            <div class="nosotros__text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus fermentum,
+                    est nec sollicitudin elementum, urna est pharetra eros,
+                    et consectetur justo elit posuere massa. Sed sit amet velit sed lorem euismod tristique in
+                    id neque. Pellentesque id rhoncus lectus. Vestibulum ante ipsum primis in faucibus orci
+                    luctus et ultrices posuere cubilia curae; Orci varius natoque penatibus et magnis dis
+                    parturient montes, nascetur ridiculus mus. Vestibulum eget consequat arcu.
+                </p>
+                <p>
+                    Vivamus congue tellus vel commodo sagittis. Praesent diam mi, ultricies eu aliquam quis,
+                    sagittis sit amet leo. Vestibulum pulvinar nisi elementum diam blandit, sed condimentum metus
+                    molestie. Etiam quam ligula, sagittis in sodales id,
+                </p>
+             </div>
+        <div class="nosotros__imagen"> <img src="img/nosotros.jpg" alt="Nosotros"><</div>
+
+    </div>
 </main>
+<section class="contenedor comprar">
+        <h2 class="comprar__titulo">¿Porqué comprar con nosotros</h2>
+    <div class="bloques">
+        <div class="bloque">
+            <img class="bloque__imagen" src="img/icono_1.png" alt="Icono">
+            <h3 class="bloque__titulo">El mejor precio</h3>
+            <p> Vestibulum pulvinar nisi elementum diam blandit, sed condimentum metus
+                molestie. Etiam quam ligula, sagittis in sodales id,</p>
+        </div><!--.bloque-->
+        <div class="bloque">
+            <img class="bloque__imagen" src="img/icono_2.png" alt="Icono">
+            <h3 class="bloque__titulo">Para Devs</h3>
+            <p> Vestibulum pulvinar nisi elementum diam blandit, sed condimentum metus
+                molestie. Etiam quam ligula, sagittis in sodales id,</p>
+        </div><!--.bloque-->
+        <div class="bloque">
+            <img class="bloque__imagen" src="img/icono_3.png" alt="Icono">
+            <h3 class="bloque__titulo">Envío gratis</h3>
+            <p> Vestibulum pulvinar nisi elementum diam blandit, sed condimentum metus
+                molestie. Etiam quam ligula, sagittis in sodales id,</p>
+        </div><!--.bloque-->
+        <div class="bloque">
+            <img class="bloque__imagen" src="img/icono_4.png" alt="Icono">
+            <h3 class="bloque__titulo">La mejor calidad</h3>
+            <p> Vestibulum pulvinar nisi elementum diam blandit, sed condimentum metus
+                molestie. Etiam quam ligula, sagittis in sodales id,</p>
+        </div><!--.bloque-->
+
+    </div><!--.bloques-->
+</section>
 <footer class="footer">
     <p class="footer__text">Front Ent Store - Todo los derechos Reservados 2024 </p>
 </footer>
