--- a/producto.html
+++ b/producto.html
@@ -14,15 +14,36 @@
 <header class="header">
 
   <a href="index.html">
-    <img class="header__logo"src="img/logo.png" alt="Logo de la pagina">
+    <img class="header__logo" src="img/logo.png" alt="Logo de la pagina">
   </a>
 </header>
 <nav class="navegacion">
   <a class="navegacion__enlace navegacion__enlace--avtivo" href="index.html">Tienda</a>
   <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
 </nav>
-<main>
-  <h1>Producto</h1>
+<main class="contenedor">
+  <h1>React js</h1>
+  <div class="camisa">
+    <img class="camisa__imagen" src="img/3.jpg" alt="Camisa">
+    <div class="camisa__texto">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus fermentum,
+        est nec sollicitudin elementum, urna est pharetra eros,
+        et consectetur justo elit posuere massa. Sed sit amet velit sed lorem euismod tristique in
+        id neque. Pellentesque id rhoncus lectus. Vestibulum ante ipsum primis
+      </p>
+      <form class="formulario">
+        <select class="formulario__campo">
+          <option disabled selected>seleccionar talla</option>
+          <option>Chica</option>
+          <option>Mediana</option>
+          <option>Grande</option>
+        </select>
+        <input type="number" class="formulario__campo" placeholder="Cantidad" min="1">
+        <input type="submit" class="formulario__submit" value="Agregar al carrito">
+
+      </form>
+    </div>
+  </div>
 </main>
 <footer class="footer">
   <p class="footer__text">Front Ent Store - Todo los derechos Reservados 2024 </p>
